# batch-dynamic-kdtree

./: .gitmodules  CMakeLists.txt  LICENSE  README.md
benchmark/: CMakeLists.txt  README.md  bench_construction.cpp  bench_delete.cpp  bench_dynamic_query.cpp  bench_insert.cpp  bench_insert_query.cpp  bench_knn.cpp  datasets  utils.h
executable/: CMakeLists.txt  parlayTest.cpp  treeTime.cpp
include/kdtree/shared/: box.h  dual.h  kdnode.h  kdtree.h  knnbuffer.h
test/: CMakeLists.txt  README.md
test/binary-heap-layout/: BHL2DStructureTest.h  BHLTests.cpp  CMakeLists.txt
test/cache-oblivious/: CMakeLists.txt  CO2DStructureTest.h  COTests.cpp
test/log-tree/: CMakeLists.txt  LT2DDeleteTest.h  LT2DStructureTest.h  LTBasicStructure.cpp
test/resources/: 2d-UniformInSphere-10K.pbbs  2d-UniformInSphere-1k.pbbs
test/shared/: BasicStructure.h  CMakeLists.txt  QueryTest.h  Shared2DTest.h  SharedTests.cpp
utils/: CMakeLists.txt
